# token-burn

./: AGENTS.md  Cargo.toml  Makefile  README.ja.md  README.md  config.toml.example
.github/workflows/: ci.yml  release.yml
claude_code/: claude_code.md
cursor/: cursor.md
docs/: pixellab_mcp.md
gemini/: gemini_cli.md  hooks_reference.md
prompts/: default.md
src/: classify.rs  cleanup.rs  config.rs  display.rs  executor.rs  format_stream.rs  init.rs  main.rs  scanner.rs  schedule.rs  state.rs
windsurf/: windsurf.md
