[package]
name = "token-burn"
version = "26.3.100"
edition = "2021"
description = "CLI tool to consume AI coding assistant tokens before weekly reset"

[[bin]]
name = "token-burn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
tokio = { version = "1.49.0", features = ["full"] }
colored = "3.1.1"
dirs = "6"
shellexpand = "3.1.2"
anyhow = "1.0.102"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.26.0"
